@@ -34,6 +34,7 @@
 ############################################################################
 
 -include $(TOPDIR)/Make.defs
+DELIM ?= $(strip /)
 
 ifeq ($(WINTOOL),y)
 INCDIROPT = -w
