@@ -8,10 +8,14 @@ CONFIG_NUTTX_NEWCONFIG=y
 # Build Setup
 #
 # CONFIG_EXPERIMENTAL is not set
-CONFIG_HOST_LINUX=y
+# CONFIG_HOST_LINUX is not set
 # CONFIG_HOST_OSX is not set
-# CONFIG_HOST_WINDOWS is not set
+CONFIG_HOST_WINDOWS=y
 # CONFIG_HOST_OTHER is not set
+# CONFIG_WINDOWS_NATIVE is not set
+CONFIG_WINDOWS_CYGWIN=y
+# CONFIG_WINDOWS_MSYS is not set
+# CONFIG_WINDOWS_OTHER is not set
 
 #
 # Build Configuration
